# ldd3-practice

./: .config  .gdbinit  .gitignore  CMakeLists.txt  DEBUGGER.md  TODO.md  kernel_config.conf  kernel_config.md
ldd3/: CMakeLists.txt
ldd3/ch02_hello/: CMakeLists.txt  Makefile  hello.c  hello.h  user.c
ldd3/ch03_scull/: CMakeLists.txt  Makefile  main.c  scull.c  scull.h  scull_core.c  scull_ioctl.h
ldd3/ch03_scull/test/: CMakeLists.txt  run_scull_smoke.sh  test_scull.c
ldd3/ch04_debug/: CMakeLists.txt  debug.h  debugfs.c  oops.c  proc.c  proc_seq_iter.c  proc_seq_snapshot.c  strace.txt  sysfs.c
ldd3/ch05_concurrency/: CMakeLists.txt  completion.c  rwsem.c  spin_locks.c
ldd3/ch06_advanced_char/: CMakeLists.txt  TESTING.md  main.c  scull.h  scull_access_control.c  scull_access_control.h  scull_core.c  scull_pipe.c  scull_pipe.h  test.c
ldd3/ch07_timers/: CMakeLists.txt  jiq.c  jit.c  time_lapse.c
ldd3/ch08_memory/: CMakeLists.txt  scullc.c  scullp.c  scullv.c
ldd3/ch09_hw_communication/: CMakeLists.txt  README.md  short.c  short_port.c
ldd3/ch10_interrupts/: CMakeLists.txt  ftracing  pci_eduirq.c  short_intr.c  shortirq.c
ldd3/ch11_ktypes/: CMakeLists.txt  ktypes.c
ldd3/ch12_pci/: CMakeLists.txt  main.c  pci_edu.c  test_runtime_pm.sh
ldd3/ch13_usb/: CMakeLists.txt  audio_playback.md  fill_uac.sh  gadget_eth.sh  lsusb_out.txt  problem_statement.md  spec.md  uac.h  uac_ctrl.c  uac_ioctl.h  uacctl.c  uacctl.md  usb_g_acm.c  usb_gadget.c  usb_gadget_test.md  usb_uac.c
ldd3/ch14_device_model/: 99-best-mint.rules  CMakeLists.txt  mint.h  mint_bus.c  mint_class.c  mint_driver.c  mint_utils.c  mintbus.h  mintbus_bus.c  mintbus_device.c  mintbus_driver.c  project.md  test_class.sh
ldd3/ch15_mmap_dma/: CMakeLists.txt  edu.c  edu_ioctl.h  edu_test.c  f_mmap.c  main.c  scullv.c  scullv_test.c
ldd3/ch16_block/: CMakeLists.txt  final_project.md  rbull.c
ldd3/ch17_net/: CMakeLists.txt  impair.h  impair_main.c  impair_qvec.c  impair_ring.c  impair_tests_pktgen.sh  net_impair.c  project.md
ldd3/ch18_tty/: CMakeLists.txt  echo_tty.c
ldd3/common_edu/: edu.c  edu.h  edu_core.c
ldd3/common_scull/: scull.h  scull_core.c  scull_ioctl.h
rpi-projects/: CMakeLists.txt  dma_mapping
rpi-projects/adc/: CMakeLists.txt  DT_LOAD.md  adc-rpi.fzz  insert_dts.sh  mcp3008-tutorial.dts  mcp3008_spi.c  mcp3008_spi_async.c  read_adc.sh  spidev_disabler.dts
rpi-projects/dac/: CMakeLists.txt  dac-rpi.fzz  insert_dts.sh  pcm5102a-tutorial.dts  pcm5102a_i2s.c  pcm5102a_regs.h
scripts/: ddbg-off.sh  ddbg-on.sh  dmesg-follow.sh  insmod.sh  kbuild.sh  rmmod.sh  trace-off.sh  trace-on.sh
toolchain/: clion_build_reload.sh  fix_db_paths.sh  gen_compile_db.sh  get_kheaders.sh  kbuild.mk  qemu.sh  qemu_ubuntu.sh  ubuntu_qemu.md
